--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,63 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #101712;
+  color: white;  
+}
+
+header{
+  padding: 1rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+main{
+  margin-top: 2rem;
+  .container{
+    margin: auto;
+    width: 80%;
+    max-width: 1200px;
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+form{
+  h2{
+    padding-left: .8rem;
+  }
+  input[type="text"]{
+    background: #EEE;
+    font-size: 15px;
+    width: 100%;
+    padding: .5rem .9rem;
+    margin: .5rem 0 2rem;
+    border-radius: 9999px;
+    border: 1px solid transparent;
+    
+  }
+  
+  .submit-button{
+    text-align: center;
+    button{
+      background: #EEE;
+      padding: .5rem 1rem;
+      border-radius: 9999px;
+      border: 1px solid transparent;
+      font-size: 1rem;
+    }
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.list{
+  margin: 3rem 0;
+  ol{
+    li{
+      font-size: 18px;
+      padding-left: 2rem;
+      margin-bottom: 2rem;
+    }
+  }
 }
